@@ -668,6 +668,10 @@ GdkDrawable *hiericon_program_pixmap;
 GdkDrawable *hiericon_program_mask;
 GdkDrawable *hiericon_class_pixmap;
 GdkDrawable *hiericon_class_mask;
+GdkDrawable *hiericon_record_pixmap;
+GdkDrawable *hiericon_record_mask;
+GdkDrawable *hiericon_generate_pixmap;
+GdkDrawable *hiericon_generate_mask;
 GdkDrawable *hiericon_design_pixmap;
 GdkDrawable *hiericon_design_mask;
 GdkDrawable *hiericon_block_pixmap;
